# cdk-mf-consumer

./: .gitignore  README.md  pyproject.toml
infrastructure/: app.py
infrastructure/infrastructure/: infrastructure_stack.py
infrastructure/tests/unit/: test_infrastructure_stack.py
src/cdk_mf_consumer/: api.py  client.py  data.py  utils.py
src/cdk_mf_consumer/flows/: README.md  ingest.py
src/cdk_mf_consumer/models/: __init__.py  base_models.py  response_models.py  user_models.py
tests/: test_storage.py
